@@ -1,0 +1,16 @@
+Teambox fork of mikel/mail
+==========================
+
+Fork Point
+----------
+
+Tag: 2.3.3
+
+Changelog
+---------
+
+* Cherry pick (e1d624f - "The Received header may contain zero name/value pairs, qmail-style (jeremy)")
+
+  * Fixes github issue #202 (https://github.com/mikel/mail/issues/202)
+  * Fixes teambox issue #3753506 (https://teambox.com/#!/projects/teambox-enterprise-accounts/tasks/3753506)
+
