@@ -4243,41 +4243,46 @@ module Mail
       end
       s0 << r1
       if r1
-        i3, s3 = index, []
-        r4 = _nt_name_val_pair
-        s3 << r4
-        if r4
-          s5, i5 = [], index
+        i4, s4 = index, []
+        r5 = _nt_name_val_pair
+        s4 << r5
+        if r5
+          s6, i6 = [], index
           loop do
-            i6, s6 = index, []
-            r7 = _nt_CFWS
-            s6 << r7
-            if r7
-              r8 = _nt_name_val_pair
-              s6 << r8
+            i7, s7 = index, []
+            r8 = _nt_CFWS
+            s7 << r8
+            if r8
+              r9 = _nt_name_val_pair
+              s7 << r9
             end
-            if s6.last
-              r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
-              r6.extend(NameValList0)
+            if s7.last
+              r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
+              r7.extend(NameValList0)
             else
-              @index = i6
-              r6 = nil
+              @index = i7
+              r7 = nil
             end
-            if r6
-              s5 << r6
+            if r7
+              s6 << r7
             else
               break
             end
           end
-          r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
-          s3 << r5
+          r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
+          s4 << r6
         end
-        if s3.last
-          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
-          r3.extend(NameValList1)
+        if s4.last
+          r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
+          r4.extend(NameValList1)
         else
-          @index = i3
-          r3 = nil
+          @index = i4
+          r4 = nil
+        end
+        if r4
+          r3 = r4
+        else
+          r3 = instantiate_node(SyntaxNode,input, index...index)
         end
         s0 << r3
       end
